# auto-annotation

./: .gitignore  README.md  annotation.py  pyproject.toml  regulate.py  requirements.txt
