[tool.poetry]
name = "auto-annotation"
version = "0.1.0"
description = ""
authors = ["kota <52403688+yashikota@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "auto_annotation"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
opencv-python = "^4.6.0.66"
numpy = "^1.24.0"
pandas = "^1.5.2"
ipython = "^8.7.0"
psutil = "^5.9.4"
PyYAML = "^6.0"
tqdm = "^4.64.1"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
